[Page] prevent vertical content shift of header with metadata and actions

--- a/polaris-react/src/components/Page/components/Header/components/Title/Title.scss
+++ b/polaris-react/src/components/Page/components/Header/components/Title/Title.scss
@@ -3,30 +3,32 @@
 .Title {
   // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
   @include text-breakword;
-  font-weight: var(--p-font-weight-bold);
-  font-size: var(--p-font-size-500);
+  font-weight: var(--p-font-weight-semibold);
+  font-size: var(--p-font-size-300);
   line-height: var(--p-font-line-height-600);
-}
 
-.TitleWithSubtitle {
-  margin-top: 0;
-}
+  #{$se23} & {
+    font-weight: var(--p-font-weight-bold);
+  }
 
-.SubTitle {
-  margin-top: var(--p-space-050);
-  color: var(--p-color-text-subdued);
+  &.TitleWithSubtitle {
+    margin-top: var(--p-space-100);
 
-  &.SubtitleCompact {
-    margin-top: var(--p-space-050);
+    #{$se23} & {
+      margin-top: 0;
+    }
   }
 }
 
-.TitleWithMetadataWrapper {
+.TitleWrapper {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   row-gap: var(--p-space-200);
-  padding-block: var(--p-space-050);
+
+  #{$se23} & {
+    padding-block: var(--p-space-050);
+  }
 
   .Title {
     display: inline;
@@ -37,9 +39,21 @@
       display: inline;
     }
   }
+}
 
-  .TitleMetadata {
+.SubTitle {
+  margin-top: var(--p-space-100);
+  color: var(--p-color-text-secondary);
+
+  &.SubtitleCompact {
     margin-top: 0;
-    vertical-align: bottom;
+
+    #{$se23} & {
+      margin-top: var(--p-space-050);
+    }
+  }
+
+  #{$se23} & {
+    margin-top: var(--p-space-050);
   }
 }
